=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.22

=over

=item *

"Cancel" on edit screens is now multi-window friendly when editing
multiple objects in multiple screens. [Michael Peters]

=item *

Added "View Details" command to workspace screen. [Michael Peters]

=item *

Fixed Workspace sorting to work like normal krang pager style sortable
tables. [Michael Peters]

=back

=head2 3.21 - August 10th, 2012

=over

=item *

Added tags to stories for classification and searching. [Michael Peters]

=item *

Added tags to media for classification and searching. [Michael Peters]

=item *

New categories created with Media Bulk Upload will now have spaces
replaced by underscores to be consisten with how we also handle
filenames. [Michael Peters]

=item *

Consistently show the user's display name (first and last if we have
it) instead of login on different screens that refer to users by
name. [Michael Peters]

=item *

Fixed bug where a user being in a group with admin_user_limited perms
would be given full admin_user access if they were in another group
with neither admin_user nor admin_user_limited perms. [Brad Oaks]

=item *

Fixed bug where New Template -> Save & Stay would hang and not
complete. [Michael Peters]

=item *

Fixed bug where Transform Image would try to operate on an image with
a known extension, but actually of the wrong type. [Michael Peters]

=item *

Fixed a bug where category choosers on New Media and New Template screens
didn't remember the last chosen category if it wasn't a "Save & Stay"
action. [Michael Peters]

=item *

Fixed a bug where switching between searching live and retired Media could
sometimes result in an ISE. [Michael Peters]

=item *

Fixed a bug where closing C<< </p> >> tags were being stripped during
Bulk Edit even when the separator wasn't C<< <p> >>. [Michael Peters]

=item *

Advanced search on Media filename no longer treats underscores as SQL