@@ -211,96 +211,6 @@
     }
   </tmpl_unless>
 </tmpl_if>
-
-change_element_class = function(select) {
-    var new_class = select.value;
-    var elements = select.form.elements;
-    var xpath = select.id.replace(/^for_/, '');
-    xpath.match(/\/([^\/]+)\[\d+\]$/);
-    var old_class = RegExp.$1;
-    var current_el;
-
-    xpath.match(/.*\[(\d+)\]$/);
-    var old_class_pos = parseInt(RegExp.$1)
-    var new_class_pos = 0;
-
-    // for the new class that we want to become, find the maximum index
-    // of the xpath's for that class before we get to our current element
-    for(var i=0; i<elements.length; i++) {
-        var el = elements[i];
-        if( ! el.name.match(/\[\d+\]/) ) continue; // only look at params that are xpaths
-        if( el.name == xpath ) {
-            current_el = el;
-            break;
-        } else if(el.name.match(new RegExp('/' + new_class + '\\[(\\d+)\\]'))) {
-            new_class_pos = parseInt(RegExp.$1);
-            new_class_pos += 1;
-        }
-    }
-    var new_name, class_changer;
-
-    // find any elements that are in the same class as this element used to be and move their
-    // xpath index "down" if they were higher than this element
-    // NOTE: JavaScript is a horrible language for manipulating regular expressions. Using them
-    // isn't too bad, but try creating them dynamically... jeesh!
-    var old_name_pattern = xpath;
-    old_name_pattern = old_name_pattern.replace(new RegExp('/' + old_class + '\\[(\\d+)\\]'), '/' + old_class + '[(\\d+)]');
-    old_name_pattern = old_name_pattern.replace(/\[/g, '\\[');
-    old_name_pattern = old_name_pattern.replace(/\]/g, '\\]');
-    old_name_pattern = old_name_pattern.replace(/\//g, '\\/');
-    var old_name_regex = new RegExp(old_name_pattern);
-    for(var i=0; i<elements.length; i++) {
-        var el = elements[i];
-        if( ! el.name.match(/\[\d+\]/) ) continue; // only look at params that are xpaths
-        if( el.name == xpath ) {
-            continue;
-        } else if(el.name.match(old_name_regex)) {
-            var old_index = parseInt(RegExp.$1);
-            if( old_index < old_class_pos ) continue; // only move those "above" us
-            new_name = el.name.replace(new RegExp('/' + old_class + '\\[\\d+\\]'), '/' + old_class + '[' + (old_index - 1) + ']');
-            // we need to change the selector's id
-            class_changer = $('for_' + el.name);  
-            if( class_changer ) class_changer.id = 'for_' + new_name;
-
-            // now finally change the element itself
-            el.name = new_name;
-        }
-    }
-
-    // find any elements that are in the same class as this element is going to be to be and move their
-    // xpath index "up" if they were higher than this element
-    var new_name_pattern = old_name_pattern;
-    new_name_pattern = new_name_pattern.replace(new RegExp('\\\\\\\/' + old_class + '\\\\\\\['), '\\/' + new_class + '\\[');
-    var new_name_regex = new RegExp(new_name_pattern);
-    for(var i=0; i<elements.length; i++) {
-        var el = elements[i];
-        if( ! el.name.match(/\[\d+\]/) ) continue; // only look at params that are xpaths
-        if( el.name == xpath ) {
-            continue;
-        } else if(el.name.match(new_name_regex)) {
-            var old_index = parseInt(RegExp.$1);
-            if( old_index < new_class_pos ) continue; // only move those "above" us
-            new_name = el.name.replace(new RegExp('/' + new_class + '\\[\\d+\\]'), '/' + new_class + '[' + (old_index + 1) + ']');
-            // we need to change the selector's id
-            class_changer = $('for_' + el.name);  
-            if( class_changer ) class_changer.id = 'for_' + new_name;
-
-            // now finally change the element itself
-            el.name = new_name;
-        }
-    }
-
-    // now change the name of this element
-    new_name = current_el.name.replace(new RegExp('/' + old_class + '\\[\\d+\\]'), '/' + new_class + '[' + new_class_pos + ']');
-    // we need to change the selector's id
-    class_changer = $('for_' + current_el.name);  
-    class_changer.id = 'for_' + new_name;
-
-    // now finally change the element itself
-    current_el.name = new_name;
-    select.id = 'for_' + new_name;
-}
-
 </script>
 
 <input name="path" value="<tmpl_var escape=html path>" type="hidden">
